Move JS into it's own file and create a new Pet component

--- a/src/index.html
+++ b/src/index.html
@@ -15,20 +15,6 @@
     <script src="https://unpkg.com/react@17.0.1/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@17.0.1/umd/react-dom.development.js"></script>
 
-    <script>
-        // it is required that components are capitalised, specifically when using JSX.
-        // JSX will assume anything capitalised is something you created, while something lowercase,
-        // like "div", is an existing element
-        const App = () => {
-            return React.createElement(
-                "div",
-                {},
-                React.createElement("h1", {}, "Adopt Me!")
-            );
-        };
-
-        // render App in ID of root
-        ReactDOM.render(React.createElement(App), document.getElementById('root'));
-    </script>
+    <script src="App.js"></script>
 </body>
 </html>
